# SourceAnalyzer

./: .gitignore  CMakeLists.txt  CONTRIBUTERS  INSTALL  LICENSE  README  uml_parser.txt
apps/cpar/: CMakeLists.txt
apps/cpar/src/: clexer.l  cpar.c  csyntaxer.hh
apps/link/: CMakeLists.txt
apps/qsagui/: CMakeLists.txt
apps/qsagui/docs/: changes.txt
apps/qsagui/forms/: linkcallgraphswidget.ui  newcallgraphwidget.ui  settingswidget.ui.orig
apps/qsagui/include/: aboutwidget.h  centralwidget.h.orig  helpwidget.h  linkcallgraphswidget.h  listwidget.h  newcallgraphwidget.h
apps/qsagui/resources/: resources.qrc
apps/qsagui/resources/html/manual/: create.html  link.html  update.html
apps/qsagui/resources/html/manual_ru/: open.html  settings.html
apps/qsagui/resources/translation/: rutranslation.qm
apps/qsagui/src/: aboutwidget.cpp  centralwidget.cpp  helpwidget.cpp  linkcallgraphswidget.cpp  mainwindow.cpp  rhwidget.cpp  svgviewer.cpp  updatecallgraphwidget.cpp
apps/view/: CMakeLists.txt
apps/view/src/: view.c
cmake/: common.cmake
include/: sa3status.h
libs/common/ast/: CMakeLists.txt
libs/common/ast/include/: common.h  iast.h  iastbuilder.h  iastiterator.h  iastwalker.h  iexception.h  inode.h  inodelocation.h  ipath.h
libs/common/ast/src/: ast.cpp  ast.h  astbuilder.cpp  astbuilder.h  astdepthwalker.cpp  astdepthwalker.h  astiterator.cpp  astiterator.h  astl2rbuilder.cpp  astl2rbuilder.h  astnulliterator.cpp  astr2lbuilder.cpp  astr2lbuilder.h  astwalker.cpp  astwalker.h  astwidthwalker.cpp  astwidthwalker.h  exception.cpp  main.cpp  node.cpp  node.h  nodelocation.cpp  nodelocation.h  path.cpp  path.h
libs/common/ast/tests/: main.cpp  testastbuilder.cpp  testastbuilder.h  testastiterator.cpp  testastiterator.h  testdepthwalker.cpp  testdepthwalker.h  testnode.cpp  testnode.h  testnodelocation.cpp  testnodelocation.h  testpath.cpp  testwidthwalker.cpp  testwidthwalker.h
libs/common/sav3/: CMakeLists.txt
libs/common/sav3/include/: sa3parsers.h
libs/common/sav3/src/: cg.c  gen.c  generate-parsers-code.sh  malloc.c  parsers.c  tools.c  wrapdb.c
libs/common/sav3/src/include/: api.h  apicall.h  badarg.h  cg.h  gen.h  types.h  wrapdb.h
qsagui/: CMakeLists.txt
qsagui/docs/: contributers  qsagui_usermanual_0.6.odt
qsagui/forms/: aboutwidget.ui  addnamedialog.ui  cleancallgraphwidget.ui  findwidget.ui  helpwidget.ui  listwidget.ui  rhwidget.ui  settingswidget.ui  updatecallgraphwidget.ui
qsagui/include/: aboutwidget.h  centralwidget.h  cleancallgraphwidget.h  helpwidget.h  linkcallgraphswidget.h  listwidget.h  mainwindow.h  newcallgraphwidget.h  rhwidget.h  saguiconstants.h  settingswidget.h  svgviewer.h  updatecallgraphwidget.h
qsagui/resources/: icon.rc
qsagui/resources/html/: welcome.html  welcome_ru.html
qsagui/resources/html/manual/: about.html  clean.html  getting_started.html  lists.html  open.html  settings.html
qsagui/resources/html/manual_ru/: about.html  clean.html  create.html  getting_started.html  link.html  lists.html  update.html
qsagui/resources/translation/: rutranslation.ts
qsagui/src/: aboutwidget.cpp  centralwidget.cpp  cleancallgraphwidget.cpp  helpwidget.cpp  linkcallgraphswidget.cpp  listwidget.cpp  main.cpp  mainwindow.cpp  newcallgraphwidget.cpp  rhwidget.cpp  settingswidget.cpp  svgviewer.cpp  updatecallgraphwidget.cpp
src/: .kdbgrc.a.out  build.sh  cg.c  malloc.c  parsers.c  run_test_ubuntu_bdb5p1  sa3.files  sa3.includes  wrapdb.c
src/include/: api.h  apicall.h  badarg.h  gen.h  malloc.h  types.h
src/lib/include/: sa3parsers.h  sa3status.h  sa3tools.h  sa3types.h
src/lib/src/: cg.c  db.c  gen.c  list.c  log.c  malloc.c  parsers.c  tools.c
src/lib/src/include/: api.h  apicall.h  badarg.h  cg.h  db.h  gen.h  list.h  malloc.h  sa3internal.h  types.h
src/lib/tests/api/: test.c
tests/cpar/: clexer.cc  cpar_main.cpp  csyntaxer.cc  csyntaxer.y
tests/link/: link.c  link_main.cpp
tests/sav3api/: CMakeLists.txt
tests/sav3api/src/: test.c
tests/tclap/: test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17-a.cpp  test17.cpp  test18.cpp  test19.cpp  test2.cpp  test20.cpp  test21.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
